3D메뉴호버효과 구현

--- a/Week2/menu_hover.html
+++ b/Week2/menu_hover.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="menu_hover.css">
   </head>
   <body>
     <ul>
-      <li><a href="#"><span></span>Facebook</a></li>
-      <li><a href="#"><span></span>Whatsapp</a></li>
-      <li><a href="#"><span></span>Twitter</a></li>
-      <li><a href="#"><span></span>Instagram</a></li>
-      <li><a href="#"><span></span>Linkedin</a></li>
+      <li style="--i:-3;--clr:#1877f2;" data-text="Facebook"><a href="#"><span><i class="fa-brands fa-facebook-f"></i></span>Facebook</a></li>
+      <li style="--i:-2;--clr:#25d366;" data-text="Whatsapp"><a href="#"><span><i class="fa-brands fa-whatsapp"></i></span>Whatsapp</a></li>
+      <li style="--i:-1;--clr:#1da1f2;" data-text="Twitter"><a href="#"><span><i class="fa-brands fa-twitter"></i></span>Twitter</a></li>
+      <li style="--i:0;--clr:#c32aa3;" data-text="Instagram"><a href="#"><span><i class="fa-brands fa-instagram"></i></span>Instagram</a></li>
+      <li style="--i:1;--clr:#ff0000;" data-text="Youtube"><a href="#"><span><i class="fa-brands fa-youtube"></i></i></span>Youtube</a></li>
+      <li style="--i:2;--clr:#0a66c2;" data-text="Linkedin"><a href="#"><span><i class="fa-brands fa-linkedin-in"></i></span>Linkedin</a></li>
     </ul>
   </body>
 </html>
